# android-gif-drawable

./: .cproject  .gitignore  .gitmodules  .travis.yml  AndroidManifest.xml  CHANGELOG.md  Doxyfile  LICENSE  README.md  SECURITY.md  Tenorgifkeyboard  buddybuild_prebuild.sh  build.gradle  consumer-proguard-rules.pro  gradle-mvn-push.gradle  gradle.properties  gradlew  ndk.gradle  pom.xml  privacy_policy.html  privacy_policy.md  roadmap.md  settings.gradle  version.properties
.github/: FUNDING.yml
.github/flujos de trabajo/: scorecards.yml
.github/workflows/: scorecards.yml
Game-App-master/: build.gradle  settings.gradle
Game-App-master/app/: build.gradle  google-services.json
android-gif-drawable/: .gitignore  .travis.yml  Doxyfile  build.gradle  consumer-proguard-rules.pro  gradle-mvn-push.gradle  gradle.properties  test-proguard-rules.pro
android-gif-drawable-native-armeabi/: build.gradle
android-gif-drawable/api/: android-gif-drawable.api
android-gif-drawable/src/main/c/: Android.mk  CMakeLists.txt  bitmap.c  bitmap.h  control.c  decoding.c  dispose.c  drawing.c  exception.c  gif.c  gif.h  init.c  jni.c  memset.arm.S  memset32_neon.S  metadata.c  opengl.c  surface.c  time.c  time.h
android-gif-drawable/src/main/c/animation/: animation.h
android-gif-drawable/src/main/c/gif/: metadata.c  metadata.h
android-gif-drawable/src/main/c/giflib/: dgif_lib.c  gif_lib.h  gifalloc.c  openbsd-reallocarray.c
android-gif-drawable/src/main/c/webp/: animation.h  webp.c  webp.h
gradle/: shipkit.gradle
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  gif.c
jni/giflib/: dgif_lib.c  gif_err.c  gif_lib.h  (+1 more)
sample/: README.md  build.gradle  gradle.properties  proguard-rules.pro  proguard-rules.txt
(+277 files in other folders)
